update setup db notebook to generate csv for drymulator

--- a/eval/setup_db.ipynb
+++ b/eval/setup_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,23 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_raw = pl.read_csv(here(\"case study/features_by_load_cells.csv\"))\n",
     "\n",
     "df = df_raw.select(\n",
-    "    pl.datetime(\n",
-    "        year=2025, month=1, day=1, hour=c.hh, minute=c.mm, second=c.ss, microsecond=c.ms\n",
-    "    ).alias(\"time\"),\n",
-    "    c.MCdb,\n",
+    "    time_seconds = c.time_s,\n",
+    "    # time = pl.datetime(\n",
+    "    #     year=2025, month=1, day=1, hour=c.hh, minute=c.mm, second=c.ss, microsecond=c.ms\n",
+    "    # ),\n",
+    "    fraction_initial = c.MCwb, weight = c.Weight_g\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -42,36 +43,45 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5_762, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>time</th><th>MCdb</th></tr><tr><td>datetime[μs]</td><td>f64</td></tr></thead><tbody><tr><td>2025-01-01 16:27:34.301303</td><td>9.0</td></tr><tr><td>2025-01-01 16:28:04.303330</td><td>8.993922</td></tr><tr><td>2025-01-01 16:28:34.302747</td><td>8.989195</td></tr><tr><td>2025-01-01 16:29:04.302070</td><td>8.983117</td></tr><tr><td>2025-01-01 16:29:34.304518</td><td>8.977715</td></tr><tr><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2025-01-01 16:26:10.075649</td><td>0.302674</td></tr><tr><td>2025-01-01 16:26:40.075243</td><td>0.301999</td></tr><tr><td>2025-01-01 16:27:10.080337</td><td>0.301999</td></tr><tr><td>2025-01-01 16:27:40.078726</td><td>0.301999</td></tr><tr><td>2025-01-01 16:28:10.081162</td><td>0.302674</td></tr></tbody></table></div>"
+       "<small>shape: (5_762, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>time_seconds</th><th>fraction_initial</th><th>weight</th></tr><tr><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>0.0</td><td>0.9</td><td>296.16</td></tr><tr><td>30.0</td><td>0.899392</td><td>295.98</td></tr><tr><td>60.0</td><td>0.89892</td><td>295.84</td></tr><tr><td>90.0</td><td>0.898312</td><td>295.66</td></tr><tr><td>120.0</td><td>0.897771</td><td>295.5</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>172710.0</td><td>0.030267</td><td>38.58</td></tr><tr><td>172740.0</td><td>0.0302</td><td>38.56</td></tr><tr><td>172770.0</td><td>0.0302</td><td>38.56</td></tr><tr><td>172800.0</td><td>0.0302</td><td>38.56</td></tr><tr><td>172830.0</td><td>0.030267</td><td>38.58</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (5_762, 2)\n",
-       "┌────────────────────────────┬──────────┐\n",
-       "│ time                       ┆ MCdb     │\n",
-       "│ ---                        ┆ ---      │\n",
-       "│ datetime[μs]               ┆ f64      │\n",
-       "╞════════════════════════════╪══════════╡\n",
-       "│ 2025-01-01 16:27:34.301303 ┆ 9.0      │\n",
-       "│ 2025-01-01 16:28:04.303330 ┆ 8.993922 │\n",
-       "│ 2025-01-01 16:28:34.302747 ┆ 8.989195 │\n",
-       "│ 2025-01-01 16:29:04.302070 ┆ 8.983117 │\n",
-       "│ 2025-01-01 16:29:34.304518 ┆ 8.977715 │\n",
-       "│ …                          ┆ …        │\n",
-       "│ 2025-01-01 16:26:10.075649 ┆ 0.302674 │\n",
-       "│ 2025-01-01 16:26:40.075243 ┆ 0.301999 │\n",
-       "│ 2025-01-01 16:27:10.080337 ┆ 0.301999 │\n",
-       "│ 2025-01-01 16:27:40.078726 ┆ 0.301999 │\n",
-       "│ 2025-01-01 16:28:10.081162 ┆ 0.302674 │\n",
-       "└────────────────────────────┴──────────┘"
+       "shape: (5_762, 3)\n",
+       "┌──────────────┬──────────────────┬────────┐\n",
+       "│ time_seconds ┆ fraction_initial ┆ weight │\n",
+       "│ ---          ┆ ---              ┆ ---    │\n",
+       "│ f64          ┆ f64              ┆ f64    │\n",
+       "╞══════════════╪══════════════════╪════════╡\n",
+       "│ 0.0          ┆ 0.9              ┆ 296.16 │\n",
+       "│ 30.0         ┆ 0.899392         ┆ 295.98 │\n",
+       "│ 60.0         ┆ 0.89892          ┆ 295.84 │\n",
+       "│ 90.0         ┆ 0.898312         ┆ 295.66 │\n",
+       "│ 120.0        ┆ 0.897771         ┆ 295.5  │\n",
+       "│ …            ┆ …                ┆ …      │\n",
+       "│ 172710.0     ┆ 0.030267         ┆ 38.58  │\n",
+       "│ 172740.0     ┆ 0.0302           ┆ 38.56  │\n",
+       "│ 172770.0     ┆ 0.0302           ┆ 38.56  │\n",
+       "│ 172800.0     ┆ 0.0302           ┆ 38.56  │\n",
+       "│ 172830.0     ┆ 0.030267         ┆ 38.58  │\n",
+       "└──────────────┴──────────────────┴────────┘"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.write_csv(here(\"drymulator/src/drymulator/server/test_data.csv\"))"
    ]
   },
   {
