refactored setup declarative memory between the client and the eval + added evaluation without declarative memory

--- a/nbs/super_client.ipynb
+++ b/nbs/super_client.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a41f80fb",
+   "metadata": {},
+   "source": [
+    "A Cat client on steroid!\n",
+    "Main feature is that it handles properly the websocket connection so that the users have a simple `send` method to interact with the cat"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7aa1f2e6",
@@ -27,7 +36,7 @@
     "import time\n",
     "from queue import Queue\n",
     "import json\n",
-    "\n"
+    "from tqdm.auto import tqdm\n"
    ]
   },
   {
@@ -108,8 +117,31 @@
     "        )\n",
     "        r.raise_for_status()\n",
     "        return r\n",
+    "    \n",
     "\n",
-    "    def delete_episodic_memory(self):\n",
+    "    def put_sentence(self, sentence: str):\n",
+    "        \"\"\"Put sentence in declarative memory\"\"\"\n",
+    "        url = f'{self.host}/memory/collections/declarative/points'\n",
+    "        json_data = {\n",
+    "            \"content\": sentence,\n",
+    "            \"metadata\": {}\n",
+    "        }\n",
+    "        response = requests.post(url, json=json_data)\n",
+    "        response.raise_for_status()\n",
+    "        return response\n",
+    "\n",
+    "    def put_sentences(self, sentences: list[str]):\n",
+    "        results = []\n",
+    "        for sentence in tqdm(sentences, desc=\"Adding to declarative memory\"):\n",
+    "            result = self.put_sentence(sentence)\n",
+    "            results.append(result)\n",
+    "        return results\n",
+    "\n",
+    "\n",
+    "    def wipe_declarative_memory(self):\n",
+    "        return self.cat_client.memory.wipe_single_collection(\"declarative\")\n",
+    "    \n",
+    "    def wipe_episodic_memory(self):\n",
     "        r = requests.delete(f\"{self.host}/memory/conversation_history\")\n",
     "        r.raise_for_status()\n",
     "        return r\n",
