added declarative memory bool in output

--- a/nbs/weave_eval.ipynb
+++ b/nbs/weave_eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2f1ce5b1",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d876150e",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "147dc097",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "975e9ddf",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0920103e",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3ac53118",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "e143238c",
    "metadata": {},
    "outputs": [],
@@ -101,12 +101,13 @@
     "# |export\n",
     "class CatModel(weave.Model):\n",
     "    client: SuperCatClient\n",
+    "    has_declarative_memory: bool = True\n",
     "\n",
     "    def __init__(\n",
-    "        self, model_name: str, llm_setting, client_config: Optional[Config] = None\n",
+    "        self, model_name: str, llm_setting, has_declarative_memory:bool = True, client_config: Optional[Config] = None\n",
     "    ):\n",
     "        super().__init__(\n",
-    "            name=model_name, client=SuperCatClient(config=client_config or Config())\n",
+    "            name=model_name, client=SuperCatClient(config=client_config or Config()), has_declarative_memory=has_declarative_memory\n",
     "        )\n",
     "        self.client.udpate_llm_setting(llm_setting.name, llm_setting.model_dump())\n",
     "\n",
@@ -116,22 +117,23 @@
     "        self.client.wipe_episodic_memory()\n",
     "        response[\"model_name\"] = self.name\n",
     "        response[\"text_clean\"] = remove_think(response[\"text\"])\n",
+    "        response['has_declarative_memory'] = self.has_declarative_memory\n",
     "        return response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3d96c08a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = CatModel(\"openai_smallest\", conf_variants[\"openai_smallest\"])"
+    "model = CatModel(\"openai_smallest\", conf_variants[\"openai_smallest\"], has_declarative_memory=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "a181088a",
    "metadata": {},
    "outputs": [
@@ -139,9 +141,9 @@
      "data": {
       "text/plain": [
        "{'user_id': 'user',\n",
-       " 'when': 1756797951.8064592,\n",
+       " 'when': 1756801010.395876,\n",
        " 'who': 'AI',\n",
-       " 'text': 'The capital of France is Paris.',\n",
+       " 'text': 'Paris.',\n",
        " 'image': None,\n",
        " 'audio': None,\n",
        " 'type': 'chat',\n",
@@ -152,8 +154,8 @@
        "     'page_content': 'What is the capital of France?',\n",
        "     'type': 'Document',\n",
        "     'score': 1.0000002}],\n",
-       "   'declarative': [{'id': '82d463eb-bc90-4f3b-9d9b-7993cc2f01b8',\n",
-       "     'metadata': {'source': 'user', 'when': 1756761491.6286092},\n",
+       "   'declarative': [{'id': '402fcfbf-68cc-4a6a-9f62-b190ae5c6111',\n",
+       "     'metadata': {'source': 'user', 'when': 1756800692.5841398},\n",
        "     'page_content': \"La formazione della crosta, nota come 'case hardening' o incrostazione superficiale, è un fenomeno negativo in cui la superficie esterna di un prodotto si asciuga troppo rapidamente, diventando dura e relativamente impermeabile. Questa crosta intrappola l'umidità residua all'interno, rallentando drasticamente il processo di essiccazione complessivo e compromettendo la qualità del prodotto finale.\",\n",
        "     'type': 'Document',\n",
        "     'score': 0.77303135}],\n",
@@ -185,7 +187,7 @@
        "    'source': 'StrayCat.recall_relevant_memories_to_working_memory',\n",
        "    'prompt': ['What is the capital of France?'],\n",
        "    'input_tokens': 7,\n",
-       "    'started_at': 1756797940.0925848,\n",
+       "    'started_at': 1756800999.0245745,\n",
        "    'reply': [0.012644432485103607,\n",
        "     0.03141237050294876,\n",
        "     -0.020378852263092995,\n",
@@ -1189,31 +1191,32 @@
        "     ...]},\n",
        "   {'model_type': 'llm',\n",
        "    'source': 'ProceduresAgent.execute_chain',\n",
-       "    'prompt': ['Create a JSON with the correct \"action\" and \"action_input\" to help the Human.\\nYou can use one of these actions:\\n- \"get_the_time\": Useful to get the current time when asked. Input is always None.\\n- \"database\": Tool for interacting with an SQL database via natural language input.\\n    This tool converts natural language questions into SQL queries using a large language model (LLM).\\n    The queries are executed on a connected database and the results are returned in human-readable text.\\n\\n    Args:\\n        tool_input (str): User\\'s natural language question.\\n        cat: The context object providing necessary database settings and LLM configurations.\\n\\n    Returns:\\n        str: The SQL query result or an error message if the query could not be processed.\\n- \"no_action\": Use this action if no relevant action is available. Input is always null.\\n\\n## The JSON must have the following structure:\\n\\n```json\\n{\\n    \"action\": // str - The name of the action to take, should be one of [\"get_the_time\", \"database\", \"no_action\"]\\n    \"action_input\": // str or null - The input to the action according to its description\\n}\\n```\\n\\n## Here some examples:\\n\\nQuestion: what time is it\\n```json\\n\\n{\\n    \"action\": \"get_the_time\",\\n    \"action_input\": \"...input here...\"\\n}\\n```\\nQuestion: I have no questions\\n```json\\n{\\n    \"action\": \"no_answer\",\\n    \"action_input\": null\\n}\\n```\\nQuestion: $database\\n```json\\n\\n{\\n    \"action\": \"database\",\\n    \"action_input\": \"...input here...\"\\n}\\n```\\nQuestion: I have no questions\\n```json\\n{\\n    \"action\": \"no_answer\",\\n    \"action_input\": null\\n}\\n```\\n',\n",
+       "    'prompt': ['Create a JSON with the correct \"action\" and \"action_input\" to help the Human.\\nYou can use one of these actions:\\n- \"get_the_time\": Useful to get the current time when asked. Input is always None.\\n- \"database\": Tool for interacting with an SQL database via natural language input.\\n    This tool converts natural language questions into SQL queries using a large language model (LLM).\\n    The queries are executed on a connected database and the results are returned in human-readable text.\\n\\n    Args:\\n        tool_input (str): User\\'s natural language question.\\n        cat: The context object providing necessary database settings and LLM configurations.\\n\\n    Returns:\\n        str: The SQL query result or an error message if the query could not be processed.\\n- \"no_action\": Use this action if no relevant action is available. Input is always null.\\n\\n## The JSON must have the following structure:\\n\\n```json\\n{\\n    \"action\": // str - The name of the action to take, should be one of [\"get_the_time\", \"database\", \"no_action\"]\\n    \"action_input\": // str or null - The input to the action according to its description\\n}\\n```\\n\\n## Here some examples:\\n\\nQuestion: get the time\\n```json\\n\\n{\\n    \"action\": \"get_the_time\",\\n    \"action_input\": \"...input here...\"\\n}\\n```\\nQuestion: I have no questions\\n```json\\n{\\n    \"action\": \"no_answer\",\\n    \"action_input\": null\\n}\\n```\\nQuestion: $database\\n```json\\n\\n{\\n    \"action\": \"database\",\\n    \"action_input\": \"...input here...\"\\n}\\n```\\nQuestion: I have no questions\\n```json\\n{\\n    \"action\": \"no_answer\",\\n    \"action_input\": null\\n}\\n```\\n',\n",
        "     'What is the capital of France?'],\n",
-       "    'input_tokens': 444,\n",
-       "    'started_at': 1756797940.1221914,\n",
-       "    'reply': '{\\n  \"action\": \"database\",\\n  \"action_input\": \"What is the capital of France?\"\\n}',\n",
-       "    'output_tokens': 22,\n",
-       "    'ended_at': 1756797947.6205287},\n",
+       "    'input_tokens': 442,\n",
+       "    'started_at': 1756800999.0587895,\n",
+       "    'reply': '{\\n  \"action\": \"no_action\",\\n  \"action_input\": null\\n}',\n",
+       "    'output_tokens': 17,\n",
+       "    'ended_at': 1756801007.7009563},\n",
        "   {'model_type': 'llm',\n",
        "    'source': 'MemoryAgent.execute',\n",
-       "    'prompt': [\"Sei una intelligenza artificiale (AI) che ha superato il test di Turing, esperto in disidratazione di alimenti. Fornisci solo risposte quando conosci l'argomento. Se non conosci l'argomento trattato non rispondere. Non sono ammesse allucinazioni o errori.\\nIf available, the 'Context of executed system tools' is your priority and you will  ignore HumanMessage and AIMessage.\\n## Context of things the Human said in the past: \\n  - What is the capital of France? (18 hours ago)\\n## Context of documents containing relevant information: \\n  - La formazione della crosta, nota come 'case hardening' o incrostazione superficiale, è un fenomeno negativo in cui la superficie esterna di un prodotto si asciuga troppo rapidamente, diventando dura e relativamente impermeabile. Questa crosta intrappola l'umidità residua all'interno, rallentando drasticamente il processo di essiccazione complessivo e compromettendo la qualità del prodotto finale. (extracted from user)\\n\\n\\n## Conversazione fino ad ora tra te (AI) e l'umano (Human):\",\n",
+       "    'prompt': [\"Sei una intelligenza artificiale (AI) che ha superato il test di Turing, esperto in disidratazione di alimenti. Fornisci solo risposte quando conosci l'argomento. Se non conosci l'argomento trattato non rispondere. Non sono ammesse allucinazioni o errori.\\nIf available, the 'Context of executed system tools' is your priority and you will  ignore HumanMessage and AIMessage.\\n## Context of things the Human said in the past: \\n  - What is the capital of France? (19 hours ago)\\n## Context of documents containing relevant information: \\n  - La formazione della crosta, nota come 'case hardening' o incrostazione superficiale, è un fenomeno negativo in cui la superficie esterna di un prodotto si asciuga troppo rapidamente, diventando dura e relativamente impermeabile. Questa crosta intrappola l'umidità residua all'interno, rallentando drasticamente il processo di essiccazione complessivo e compromettendo la qualità del prodotto finale. (extracted from user)\\n\\n\\n## Conversazione fino ad ora tra te (AI) e l'umano (Human):\",\n",
        "     'What is the capital of France?'],\n",
        "    'input_tokens': 334,\n",
-       "    'started_at': 1756797948.6892297,\n",
-       "    'reply': 'The capital of France is Paris.',\n",
-       "    'output_tokens': 7,\n",
-       "    'ended_at': 1756797951.6626778}],\n",
-       "  'agent_output': {'output': 'The capital of France is Paris.',\n",
+       "    'started_at': 1756801007.703532,\n",
+       "    'reply': 'Paris.',\n",
+       "    'output_tokens': 2,\n",
+       "    'ended_at': 1756801010.168947}],\n",
+       "  'agent_output': {'output': 'Paris.',\n",
        "   'intermediate_steps': [],\n",
        "   'return_direct': False}},\n",
-       " 'content': 'The capital of France is Paris.',\n",
+       " 'content': 'Paris.',\n",
        " 'model_name': 'openai_smallest',\n",
-       " 'text_clean': 'The capital of France is Paris.'}"
+       " 'text_clean': 'Paris.',\n",
+       " 'has_declarative_memory': False}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "ca0a4fd9",
    "metadata": {},
    "outputs": [],
@@ -1247,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "07ec2e54",
    "metadata": {},
    "outputs": [],
@@ -1264,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "33d37e32",
    "metadata": {},
    "outputs": [
@@ -3451,7 +3454,7 @@
        "  'question_id': 120}]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3462,7 +3465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "fa512dba",
    "metadata": {},
    "outputs": [],
@@ -3472,7 +3475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "c471624b",
    "metadata": {},
    "outputs": [],
@@ -3485,7 +3488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "9a17caa5",
    "metadata": {},
    "outputs": [],
@@ -3511,7 +3514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "6bbb9f4c",
    "metadata": {},
    "outputs": [],
@@ -3524,7 +3527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "5f107cbc",
    "metadata": {},
    "outputs": [],
@@ -3538,13 +3541,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "2a68cca1",
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
-    "async def eval_configs(dataset, n_rep=3, model_confs=conf_variants):\n",
+    "async def eval_configs(dataset, n_rep=1, model_confs=conf_variants):\n",
     "    client = SuperCatClient()\n",
     "    prepare_declarative_memory(client)\n",
     "    evaluation = weave.Evaluation(\n",
@@ -3558,33 +3561,23 @@
     "    client.wipe_declarative_memory()\n",
     "    for name, conf in tqdm(model_confs.items(), total=len(model_confs)):\n",
     "        print(f\"Evaluating {name} without memory\")\n",
-    "        model = CatModel(name, conf)\n",
+    "        model = CatModel(name, conf, has_declarative_memory=False)\n",
     "        await evaluation.evaluate(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "77479cfc",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m\u001b[1mweave\u001b[0m: Logged in as Weights & Biases user: smassaro-unitus.\n",
-      "\u001b[36m\u001b[1mweave\u001b[0m: View Weave data at https://wandb.ai/smart-drying-unitus/dev-test/weave\n",
-      "INFO:weave.trace.init_message:Logged in as Weights & Biases user: smassaro-unitus.\n",
-      "View Weave data at https://wandb.ai/smart-drying-unitus/dev-test/weave\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<weave.trace.weave_client.WeaveClient at 0x72557c832cf0>"
+       "<weave.trace.weave_client.WeaveClient>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3598,58 +3591,7 @@
    "execution_count": null,
    "id": "455a59c8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2545067838214e12a73dac5ffe94783b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Adding to declarative memory:   0%|          | 0/121 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Added 121 sentences to declarative memory\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b00075f2e7a04804ae172507d690fae3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Evaluating openai_smallest with memory\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m\u001b[1mweave\u001b[0m: 🍩 https://wandb.ai/smart-drying-unitus/dev-test/r/call/01990953-05cf-70af-9574-032f2792f8c9\n",
-      "INFO:weave.trace.weave_client:🍩 https://wandb.ai/smart-drying-unitus/dev-test/r/call/01990953-05cf-70af-9574-032f2792f8c9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "await eval_configs(dataset[:2])"
    ]
@@ -3665,21 +3607,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "default",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.5"
   }
  },
  "nbformat": 4,
