--- a/nbs/weave_eval.ipynb
+++ b/nbs/weave_eval.ipynb
@@ -3519,6 +3519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "def read_sentences():\n",
     "    path = here(\"eval/declarative_memory.csv\")\n",
     "    df = pd.read_csv(path)\n",
@@ -3532,6 +3533,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "def prepare_declarative_memory(client: SuperCatClient):\n",
     "    client.wipe_declarative_memory()\n",
     "    sentences = read_sentences()\n",
