update latest data

--- a/nbs/weave_eval.ipynb
+++ b/nbs/weave_eval.ipynb
@@ -3565,7 +3565,7 @@
     "    prepare_declarative_memory(client)\n",
     "    evaluation = weave.Evaluation(\n",
     "        dataset=list(repeat_dataset(dataset, n_rep)),\n",
-    "        scorers=[hallucination_scorer, similarity_scorer],\n",
+    "        scorers=[similarity_scorer],\n",
     "        name=eval_name,\n",
     "    )\n",
     "    for name, conf in tqdm(model_confs.items(), total=len(model_confs)):\n",
