--- a/nbs/rerun-evaluation.ipynb
+++ b/nbs/rerun-evaluation.ipynb
@@ -74,6 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "calls_query = {\n",
     "    \"$expr\": {\n",
     "        \"$and\": [\n",
@@ -2006,9 +2007,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "default",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
